--- a/app/src/main/res/layout/activity_video_files.xml
+++ b/app/src/main/res/layout/activity_video_files.xml
@@ -3,12 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-<androidx.recyclerview.widget.RecyclerView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/folders_rv" />
-
+    tools:context=".VideoFilesActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
