--- a/app/src/main/res/layout/activity_video_player.xml
+++ b/app/src/main/res/layout/activity_video_player.xml
@@ -1,9 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".VideoPlayerActivity">
+    <com.google.android.exoplayer2.ui.PlayerView
+        android:id="@+id/exoplayer_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#000000"
+        app:hide_on_touch="true"
+        app:resize_mode="fit"
+        app:player_layout_id="@layout/exo_player_view"
+        app:rewind_increment="10000"
+        app:fastforward_increment="10000"
+        app:shutter_background_color="#000000"
+        app:use_controller="true"
+        app:controller_layout_id="@layout/custom_playback_view"
+        app:show_timeout="4000"
+        app:surface_type="surface_view"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
